Debug log added

--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -23,3 +23,6 @@ log4j.logger.org.hibernate.SQL=DEBUG
 #log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.jdbc.datasource=DEBUG
+
+#log4j.logger.org.springframework.transaction=DEBUG
+#log4j.logger.org.springframework.orm.hibernate3.HibernateTransactionManager=DEBUG
