Refactoring preprocessing chain

--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -13,15 +13,15 @@ log4j.logger.org.openforis.calc=DEBUG
 
 #log4j.logger.org.apache.ddlutils=WARN
 #log4j.logger.org.geotools.referencing.factory.epsg=ERROR
-log4j.logger.org.springframework=ERROR
+#log4j.logger.org.springframework=ERROR
 
 #log4j.logger.org.jooq=INFO
-log4j.logger.org.hibernate.SQL=DEBUG
+#log4j.logger.org.hibernate.SQL=DEBUG
 
 #log4j.logger.org.springframework=INFO
 #log4j.logger.org.springframework.aop=ERROR
 #log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.jdbc.datasource=DEBUG
 
-log4j.logger.org.springframework.transaction=DEBUG
-log4j.logger.org.springframework.orm.hibernate3.HibernateTransactionManager=DEBUG
+#log4j.logger.org.springframework.transaction=DEBUG
+#log4j.logger.org.springframework.orm.hibernate3.HibernateTransactionManager=DEBUG
