--- a/pom.xml
+++ b/pom.xml
@@ -385,6 +385,66 @@
 				<version>3.0-alpha-1</version>
 				<scope>provided</scope>
 			</dependency>
+		    <dependency>
+		    	<groupId>org.springframework</groupId>
+		    	<artifactId>spring-orm</artifactId>
+		    	<version>${spring.version}</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>org.hibernate.javax.persistence</groupId>
+		    	<artifactId>hibernate-jpa-2.0-api</artifactId>
+		    	<version>1.0.1.Final</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>org.hibernate</groupId>
+		    	<artifactId>hibernate-entitymanager</artifactId>
+		    	<version>4.2.1.Final</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>org.hibernate</groupId>
+		    	<artifactId>hibernate-ehcache</artifactId>
+		    	<version>4.2.1.Final</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>org.slf4j</groupId>
+		    	<artifactId>slf4j-api</artifactId>
+		    	<version>1.7.5</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>org.slf4j</groupId>
+		    	<artifactId>slf4j-log4j12</artifactId>
+		    	<version>1.7.5</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>log4j</groupId>
+		    	<artifactId>log4j</artifactId>
+		    	<version>1.2.14</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>com.googlecode.json-simple</groupId>
+		    	<artifactId>json-simple</artifactId>
+		    	<version>1.1</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>junit</groupId>
+		    	<artifactId>junit</artifactId>
+		    	<version>4.11</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>com.googlecode.json-simple</groupId>
+		    	<artifactId>json-simple</artifactId>
+		    	<version>1.1</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>net.rforge.rjava</groupId>
+		    	<artifactId>jriengine</artifactId>
+		    	<version>0.9-5</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>net.rforge.rjava</groupId>
+		    	<artifactId>rengine</artifactId>
+		    	<version>0.9-5</version>
+		    </dependency>
 		</dependencies>
 	</dependencyManagement>
 
