--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -25,7 +25,11 @@
 <!-- 	</repository> -->
 <!-- 	</repositories> -->
 		
-
+	
+	<properties>
+		<mondrian-source-files-dir>${project.build.directory}/generated-sources/mondrian</mondrian-source-files-dir>
+	</properties>
+	
 	<build>
 		<plugins>
 			<!-- Read dev properties -->
@@ -49,6 +53,27 @@
 				</configuration>
 			</plugin>
 
+
+			<!-- Generate java file from mondrian xsd using jaxb2 maven plugin  -->
+			<plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>xjc</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <packageName>org.openforis.calc.mondrian</packageName> 
+                   	<outputDirectory>${mondrian-source-files-dir}</outputDirectory>
+                   	<schemaFiles>mondrian.xsd</schemaFiles>
+                </configuration>
+            </plugin>
+            
 			<!-- Add generated sources to build path -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -81,8 +106,21 @@
 							</resources>
 						</configuration>
 					</execution>
+					<execution>
+						<id>add-mondrian-sources</id>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${mondrian-source-files-dir}</source>
+							</sources>							
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
+			
 			<!--  Liquibase plugin -->
 			<plugin>
 				<groupId>org.liquibase</groupId>
@@ -114,6 +152,7 @@
 			</plugin>			
 
 		</plugins>
+		
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -382,6 +421,12 @@
 			<artifactId>json-simple</artifactId>
 		</dependency>
 		
+		<!-- Jaxb -->
+		<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        
 <!-- 		Testing -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -423,5 +468,6 @@
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 </project>
