--- a/pom.xml
+++ b/pom.xml
@@ -116,15 +116,22 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.0.2</version>
+					<version>2.5.1</version>
 					<configuration>
 						<source>1.6</source>
 						<target>1.6</target>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
 				</plugin>
-			</plugins>
+				
+				<plugin>
+	                <groupId>org.codehaus.mojo</groupId>
+	                <artifactId>jaxb2-maven-plugin</artifactId>
+	                <version>1.5</version>			
+	           	</plugin>     
+        	</plugins>
 		</pluginManagement>
+		
 		<plugins>
 			<!--  Set Eclipse project text encoding to UTF-8 -->
 			<plugin>
@@ -235,6 +242,7 @@
 				<artifactId>spring-test</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+			
 			<!-- ZK -->
 			<dependency>
 				<groupId>org.zkoss.zk</groupId>
@@ -293,6 +301,7 @@
 				<artifactId>mondrian</artifactId>
 				<version>${mondrian.version}</version>
 			</dependency>
+			
 			<!-- Database -->
 			<dependency>
 				<groupId>postgresql</groupId>
@@ -378,6 +387,13 @@
 		    	<version>${jackson.version}</version>
 		    </dependency>
 		    
+		    
+		    <!-- Jaxb -->
+			<dependency>
+	            <groupId>javax.xml.bind</groupId>
+	            <artifactId>jaxb-api</artifactId>
+	            <version>2.1</version>
+	        </dependency>
 		    
 		    <dependency>
 				<groupId>javax.servlet</groupId>
