--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -60,7 +60,7 @@
 				<!-- Specify the maven code generator plugin -->
 				<groupId>org.jooq</groupId>
 				<artifactId>jooq-codegen-maven</artifactId>
-				<version>2.4.2</version>
+				<version>${jooq.version}</version>
 		
 				<!-- The plugin should hook into the generate goal -->
 				<executions>
@@ -109,6 +109,7 @@
 						</database>
 						<generate>
 							<relations>true</relations>
+							<records>false</records>
 							<deprecated>false</deprecated>
 						</generate>
 						<target>
@@ -551,6 +552,10 @@
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq</artifactId>
+		</dependency>
 	</dependencies>
 </project>
