--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 
 	<modules>
 		<module>calc-core</module>
-		<module>calc-webapp</module>
-		<module>calc-server</module>
+<!-- 		<module>calc-webapp</module> -->
+<!-- 		<module>calc-server</module> -->
 	</modules>
 
 	<properties>
