--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -20,8 +20,10 @@ log4j.logger.org.openforis.calc=DEBUG
 
 #log4j.logger.org.springframework=INFO
 #log4j.logger.org.springframework.aop=ERROR
-#log4j.logger.org.springframework.transaction=INFO
+log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.jdbc.datasource=DEBUG
 
-#log4j.logger.org.springframework.transaction=DEBUG
 #log4j.logger.org.springframework.orm.hibernate3.HibernateTransactionManager=DEBUG
+#log4j.logger.springframework.jdbc=debug
+
+
