--- a/calc-core/src/main/resources/log4j.properties
+++ b/calc-core/src/main/resources/log4j.properties
@@ -7,6 +7,8 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 log4j.logger.org.openforis.calc=DEBUG
+log4j.logger.org.openforis.calc.psql.Psql=DEBUG
+
 #log4j.logger.org.openforis.calc.r=INFO
 #log4j.logger.org.openforis.calc.persistence=DEBUG
 #log4j.logger.org.openforis.calc.importer=DEBUG
@@ -15,12 +17,12 @@ log4j.logger.org.openforis.calc=DEBUG
 #log4j.logger.org.geotools.referencing.factory.epsg=ERROR
 #log4j.logger.org.springframework=ERROR
 
-#log4j.logger.org.jooq=INFO
+#log4j.logger.org.jooq=DEBUG
 #log4j.logger.org.hibernate.SQL=DEBUG
 
 #log4j.logger.org.springframework=INFO
 #log4j.logger.org.springframework.aop=ERROR
-log4j.logger.org.springframework.transaction=INFO
+#log4j.logger.org.springframework.transaction=INFO
 #log4j.logger.org.springframework.jdbc.datasource=DEBUG
 
 #log4j.logger.org.springframework.orm.hibernate3.HibernateTransactionManager=DEBUG
