Collect data import controller

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<modules>
 		<module>calc-core</module>
 <!-- 		<module>calc-webapp</module> -->
-<!-- 		<module>calc-server</module> -->
+		<module>calc-server</module>
 	</modules>
 
 	<properties>
