--- a/calc-webapp/pom.xml
+++ b/calc-webapp/pom.xml
@@ -32,5 +32,11 @@
 <!-- 			</exclusions> -->
 		</dependency>
 		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
+		
 	</dependencies>
 </project>
