--- a/calc-server/pom.xml
+++ b/calc-server/pom.xml
@@ -23,7 +23,30 @@
 			<artifactId>calc-core</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+<!-- 			<version>${spring.version}</version> -->
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+<!-- 		<dependency> -->
+<!-- 			<groupId>javax.validation</groupId> -->
+<!-- 			<artifactId>validation-api</artifactId> -->
+<!-- 			<version>1.1.0.Final</version> -->
+<!-- 		</dependency> -->
 
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>5.0.1.Final</version>
+			</dependency>
+		            
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.springframework</groupId> -->
 <!-- 			<artifactId>spring-core</artifactId> -->
