--- a/calc-server/pom.xml
+++ b/calc-server/pom.xml
@@ -92,6 +92,13 @@
 <!-- 			<version>1.1.1</version> -->
 <!-- 		</dependency> -->
 
+		<dependency>
+	    	<groupId>org.liquibase</groupId>
+	    	<artifactId>liquibase-core</artifactId>
+<!-- 	    	<version>3.0.5</version> -->
+			<version>3.1.0-SNAPSHOT</version>
+	    </dependency>
+	    
 		<!-- Tomcat provided dependencies -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
