--- a/calc-webapp/pom.xml
+++ b/calc-webapp/pom.xml
@@ -38,5 +38,12 @@
 			<version>1.3</version>
 		</dependency>
 		
+		<dependency>
+	    	<groupId>org.liquibase</groupId>
+	    	<artifactId>liquibase-core</artifactId>
+<!-- 	    	<version>3.0.5</version> -->
+			<version>3.1.0-SNAPSHOT</version>
+	    </dependency>
+		
 	</dependencies>
 </project>
