--- a/calc-webapp/pom.xml
+++ b/calc-webapp/pom.xml
@@ -39,11 +39,10 @@
 		</dependency>
 		
 		<dependency>
-	    	<groupId>org.liquibase</groupId>
-	    	<artifactId>liquibase-core</artifactId>
-<!-- 	    	<version>3.0.5</version> -->
-			<version>3.1.0-SNAPSHOT</version>
-	    </dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>3.0.6</version>
+		</dependency>
 		
 	</dependencies>
 </project>
