--- a/calc-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/calc-webapp/src/main/webapp/WEB-INF/web.xml
@@ -117,9 +117,9 @@
 <!-- 	<distributable /> -->
 
 	<!-- /// Session timeout in minutes /// -->
-	<session-config>
-		<session-timeout>60</session-timeout>
-	</session-config>
+<!-- 	<session-config> -->
+<!-- 		<session-timeout>60</session-timeout> -->
+<!-- 	</session-config> -->
 
 
 
