--- a/calc-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/calc-webapp/src/main/webapp/WEB-INF/web.xml
@@ -110,6 +110,11 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>*.xml</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>spring</servlet-name>
+		<url-pattern>*.csv</url-pattern>
+	</servlet-mapping>
+	
 	<!-- ====================================================== -->
 	<!-- MISCELLANEOUS -->
 	<!-- ====================================================== -->
