--- a/calc-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/calc-webapp/src/main/webapp/WEB-INF/web.xml
@@ -122,9 +122,9 @@
 <!-- 	<distributable /> -->
 
 	<!-- /// Session timeout in minutes /// -->
-<!-- 	<session-config> -->
-<!-- 		<session-timeout>60</session-timeout> -->
-<!-- 	</session-config> -->
+	<session-config>
+		<session-timeout>-1</session-timeout>
+	</session-config>
 
 	
 	<!-- ===================== (tmp) Used for the live demo ================ -->
