--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -355,6 +355,14 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 
+		<!-- Provided libraries -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<!-- Derby -->
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.apache.derby</groupId> -->
