--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,11 @@
 				<version>${jooq.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.jooq</groupId>
+				<artifactId>jooq-codegen-maven</artifactId>
+				<version>${jooq.version}</version>
+  			</dependency>
+			<dependency>
 				<groupId>org.postgis</groupId>
 				<artifactId>postgis-jdbc</artifactId>
 				<version>1.3.3</version>
